@@ -111,6 +111,13 @@ class Service:
             if decision.decision == 'block_indemnification':
                 return elem
 
+    def clone_last_indemnification(self, start, end):
+        indemnification = super(Service, self).clone_last_indemnification(
+            start, end)
+        indemnification.apply_underwriting_reduction = self.indemnifications[
+            -1].apply_underwriting_reduction
+        return indemnification
+
 
 class Indemnification:
     __metaclass__ = PoolMeta
